# prism-telemetry

./: .editorconfig  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: release-plz.yml
src/: config.rs  lib.rs  logs.rs  metrics.rs  telemetry.rs
